[gd_scene load_steps=4 format=3 uid="uid://qgmia0iip2e7"]

[ext_resource type="Script" path="res://legacy/scripts/main_menu.gd" id="1_uarjc"]
[ext_resource type="Script" path="res://legacy/scripts/input.gd" id="2_7eore"]
[ext_resource type="PackedScene" uid="uid://bxxolwdugtt70" path="res://scenes/input_button.tscn" id="3_ohycq"]

[node name="Main Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uarjc")

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="Menu"]
layout_mode = 2
text = "Start"

[node name="Settings" type="Button" parent="Menu"]
layout_mode = 2
text = "Settings
"

[node name="Exit" type="Button" parent="Menu"]
layout_mode = 2
text = "Exit"

[node name="Settings" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Video" type="Button" parent="Settings/VBoxContainer"]
layout_mode = 2
text = "Video"

[node name="Audio" type="Button" parent="Settings/VBoxContainer"]
layout_mode = 2
text = "Audio
"

[node name="Controls" type="Button" parent="Settings/VBoxContainer"]
layout_mode = 2
text = "Controls
"

[node name="BackFromSettings" type="Button" parent="Settings"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "Back
"

[node name="Video" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = -40.0
offset_right = 55.5
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2

[node name="Fullscreen" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
text = "Fullscreen
"

[node name="Borderless" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
text = "Borderless"

[node name="VSync" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
text = "Vsync"

[node name="Checks" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2

[node name="Fullscreen" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2

[node name="Borderless" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2

[node name="VSync" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2

[node name="BackFromVideo" type="Button" parent="Video"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "Back
"

[node name="Audio" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = -38.5
offset_right = 206.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
text = "Master"

[node name="Music" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
text = "Music"

[node name="Sound FX" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
text = "Sound FX"

[node name="Sliders" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 13

[node name="Master" type="HSlider" parent="Audio/HBoxContainer/Sliders"]
layout_mode = 2

[node name="Music" type="HSlider" parent="Audio/HBoxContainer/Sliders"]
layout_mode = 2

[node name="Sound FX" type="HSlider" parent="Audio/HBoxContainer/Sliders"]
layout_mode = 2

[node name="BackFromAudio" type="Button" parent="Audio"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "Back
"

[node name="Input" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_7eore")

[node name="PanelContainer" type="PanelContainer" parent="Input"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -309.0
offset_top = -237.0
offset_right = 309.0
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Input/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Input/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Input/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionList" type="VBoxContainer" parent="Input/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InputButton" parent="Input/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("3_ohycq")]
layout_mode = 2

[node name="InputButton2" parent="Input/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("3_ohycq")]
layout_mode = 2

[node name="InputButton3" parent="Input/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("3_ohycq")]
layout_mode = 2

[node name="InputButton4" parent="Input/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("3_ohycq")]
layout_mode = 2

[node name="InputButton5" parent="Input/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("3_ohycq")]
layout_mode = 2

[node name="ResetButton" type="Button" parent="Input/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Reset to default"

[node name="BackFromInput" type="Button" parent="Input"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -31.0
offset_right = 22.5
grow_horizontal = 2
grow_vertical = 0
text = "Back
"

[node name="Saves" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Saves"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -165.0
offset_right = 196.0
offset_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2

[node name="Save 1" type="Button" parent="Saves/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Saves/VBoxContainer/Save 1"]
layout_mode = 2
offset_right = 392.0
offset_bottom = 107.0

[node name="Label" type="Label" parent="Saves/VBoxContainer/Save 1/HBoxContainer"]
layout_mode = 2
text = "1
"

[node name="Save 2" type="Button" parent="Saves/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Saves/VBoxContainer/Save 2"]
layout_mode = 2
offset_right = 392.0
offset_bottom = 107.0

[node name="Label" type="Label" parent="Saves/VBoxContainer/Save 2/HBoxContainer"]
layout_mode = 2
text = "2
"

[node name="Save 3" type="Button" parent="Saves/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Saves/VBoxContainer/Save 3"]
layout_mode = 2
offset_right = 392.0
offset_bottom = 108.0

[node name="Label" type="Label" parent="Saves/VBoxContainer/Save 3/HBoxContainer"]
layout_mode = 2
text = "3"

[node name="BackFromSaves" type="Button" parent="Saves"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -31.0
offset_right = 22.5
grow_horizontal = 2
grow_vertical = 0
text = "Back
"

[node name="Label" type="Label" parent="Saves"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -196.0
offset_right = 196.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Save Files"
horizontal_alignment = 1

[connection signal="pressed" from="Menu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Menu/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Settings/BackFromSettings" to="." method="_on_back_from_settings_pressed"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/Borderless" to="." method="_on_borderless_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/VSync" to="." method="_on_v_sync_toggled"]
[connection signal="pressed" from="Video/BackFromVideo" to="." method="_on_back_from_video_pressed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Sliders/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Sliders/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Sliders/Sound FX" to="." method="_on_sound_fx_value_changed"]
[connection signal="pressed" from="Audio/BackFromAudio" to="." method="_on_back_from_audio_pressed"]
[connection signal="pressed" from="Input/PanelContainer/MarginContainer/VBoxContainer/ResetButton" to="Input" method="_on_reset_button_pressed"]
[connection signal="pressed" from="Input/BackFromInput" to="." method="_on_back_from_input_pressed"]
[connection signal="pressed" from="Saves/VBoxContainer/Save 1" to="." method="_on_save_1_pressed"]
[connection signal="pressed" from="Saves/VBoxContainer/Save 2" to="." method="_on_save_2_pressed"]
[connection signal="pressed" from="Saves/VBoxContainer/Save 3" to="." method="_on_save_3_pressed"]
[connection signal="pressed" from="Saves/BackFromSaves" to="." method="_on_back_from_saves_pressed"]
